# mlops_practice

lab1/: __modeling.py  data_creation.py  data_preprocessing.py  model_preparation.py  model_testing.py  pipeline.sh  pyproject.toml
